# YINI-pp

./: .gitignore  CMakeLists.txt  README.md  README_OLD.md
include/: yini.hpp
tests/: CMakeLists.txt  example.yini  test_basic.cpp  test_parser.cpp  test_writer.cpp
